--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "engine.io": "1.5.1",
     "socket.io-parser": "2.2.4",
-    "socket.io-client": "1.3.5",
+    "socket.io-client": "https://github.com/kidozen/socket.io-client/archive/1.3.5-kido.tar.gz",
     "socket.io-adapter": "0.3.1",
     "has-binary-data": "0.1.3",
     "debug": "2.1.0"
